--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 pytest = "*"
 pytest-mock = "*"
 pudb = "*"
+flake8 = "*"
 
 [requires]
 python_version = "3.7"
@@ -17,3 +18,6 @@ path = "./../plug-libs/plug_framework-0.0.24-py3-none-any.whl"
 [packages.dread-snarfle]
 editable = true
 path = "."
+
+[packages.d695a70]
+path = "./../plug-libs/plug-api-2.0.1.tar.gz"
