--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,9 @@
 test=pytest
 
 [tool:pytest]
-python_files = tests/*.py
+python_files=tests/*.py
+filterwarnings=
+    ignore::DeprecationWarning
 
 [flake8]
 max-line-length=120
