--- a/config.yaml
+++ b/config.yaml
@@ -3,14 +3,27 @@ plug:
   max_block_size: 100000
   registry:
     plugins:
-    - dread_snarfle.InventoryPlugin
+    - dread_snarfle.GamePlugin
   storage:
     class: plug.storage.sqlite.SqliteStorage
     path: db.sqlite
-
-# initial_state:
-#   free_money.model.BalanceModel:
-#     1Ax9pA92ZAeziwGfmG5qGSgZRZT9nbX3or:
-#         balance: 100
-#     12z3kokcMpB6a7RrCMzcYDryZk4V96gKgz:
-#         balance: 100
+  initial_state:
+    dread_snarfle.model.CreatureModel:
+      XGgFJLhnEAzrVV89Pw5Qy2b42Sw5:
+        intact: 100
+        name: 'Confused Wumpus'
+      1NCPcwS57c2YBQPdbdpheWZoZCrSyHobki:
+        intact: 100
+        name: 'Moderately Impressive Heehaw'
+      1JHcs4A1UpEUsjPcFZbT2hfGKbEhf6eQzc:
+        intact: 100
+        name: 'Dread Snarfle'
+    dread_snarfle.model.PlayerModel:
+      1Bacse5aevmV6UjnfAc3yJEmhqL9yFsixr:
+        intact: 100
+        name: 'Testy McTesterson'
+        email: 'testy@example.com'
+    dread_snarfle.model.ItemModel:
+      1Bacse5aevmV6UjnfAc3yJEmhqL9yFsixr:
+        intact: 100
+        name: 'Tarnished Kitchen Knife'
